[package]
name = "nannou-playground"
version = "0.1.0"
edition = "2021"
authors = [
    "whoisryosuke <ryosuke.san.hana@gmail.com>",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.18.1"

[[example]]
name = "hello-world"
path = "hello-world/hello-world.rs"

[[example]]
name = "mouse-event"
path = "mouse-event/mouse-event.rs"

[[example]]
name = "basics-functions"
path = "basics-functions/basics-functions.rs"

[[example]]
name = "basics-input"
path = "basics-input/basics-input.rs"