[package]
name = "nannou-playground"
version = "0.1.0"
edition = "2021"
authors = [
    "whoisryosuke <ryosuke.san.hana@gmail.com>",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.18.1"
nannou_egui = "0.5.0"

[[example]]
name = "hello-world"
path = "hello-world/hello-world.rs"

[[example]]
name = "mouse-event"
path = "mouse-event/mouse-event.rs"

[[example]]
name = "basics-functions"
path = "basics-functions/basics-functions.rs"

[[example]]
name = "basics-input"
path = "basics-input/basics-input.rs"

[[example]]
name = "module-example"
path = "module-example/module-example.rs"

[[example]]
name = "particles-basic"
path = "particles-basic/particles-basic.rs"

[[example]]
name = "particles-water"
path = "particles-water/particles-water.rs"

[[example]]
name = "particles-lines"
path = "particles-lines/particles-lines.rs"

[[example]]
name = "egui-example"
path = "ui/egui-example/egui-example.rs"

[[example]]
name = "texture-sampler"
path = "textures/texture_sampler.rs"

[[example]]
name = "texture-sampler2"
path = "textures/texture_sampler2.rs"

[[example]]
name = "texture-simple"
path = "textures/texture_simple.rs"